<resources>
    <string name="inicio">Inicio</string>
    <string name="buscar">Buscar</string>
    <string name="camara">Camera</string>
    <string name="favoritos">Favoritos</string>
    <string name="perfil">Perfil</string>
    <string name="app_name">Find My Business</string>
    <string name="find_my_business" translatable="false">Find My Business</string>
    <string name="iniciar_sesión">Iniciar Sesión</string>
    <string name="Tiniciar_sesion">Iniciar sesión</string>
    <string name="emailLabel">Correo electrónico</string>
    <string name="registrate">Regístrate</string>
    <string name="title_activity_principal_user" translatable="false">principalUser</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Ajustes</string>
    <string name="engine_init_error" translatable="false">Map engine initialization</string>
    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_gallery" translatable="false">Gallery</string>
    <string name="menu_slideshow" translatable="false">Slideshow</string>
    <string name="button" translatable="false">Button</string>
    <string name="title_activity_home">Inicio</string>
    <string name="title_activity_main2">Principal</string>
    <string name="title_activity_home_map">Mapa</string>
    <string name="title_click" translatable="false">Title click</string>
    <string name="menu_group">Grupo</string>
    <string name="find_my_bussines" translatable="false">FIND MY BUSSINES</string>
    <string name="javier_mu_oz_bussines_com" translatable="false">Javier Muñoz - Bussines.com</string>
    <string name="menu_Negocios">Negocios</string>
    <string name="menu_Favoritos">Favoritos</string>
    <string name="menu_Servicios">Servicios</string>
    <string name="Notificaciones">Notificaciones</string>
    <string name="menu_Compartir">Compartir</string>
    <string name="menu_Configuración">Configuración</string>
    <string name="acerca_de_nosotros">Acerca de Nosotros</string>
    <string name="email">Email</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="nombre">Nombre</string>
    <string name="correo_electronico">Correo Electrónico</string>
    <string name="registrar">Registrar</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="todo" translatable="false">TODO</string>
    <string name="otros">Otros</string>
    <string name="nombreCompleto">Nombre</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txtApellidos">Apellidos</string>
    <string name="title_activity_admin_seller" translatable="false">adminSeller</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_product" translatable="false">createProduct</string>
    <string name="settings_theme_key" translatable="false">theme</string>
    <string name="espa_ol">Español</string>
    <string name="ingl_s">Inglés</string>
    <string name="idioma">Idioma</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="reportar_un_bug">Reportar un bug</string>
    <string name="enviar">ENVIAR</string>
    <string name="para">Para</string>
    <string name="mensaje">Mensaje</string>
    <string name="asunto">Asunto:</string>
    <string name="se_enviar_un_mensaje_por_correo_a_findmybusiness_gmail_com_en_el_que_detallar_s_el_problema_que_encontraste_nuestros_colaboradores_te_ayudar_n_en_breve_mejorando_la_aplicaci_n">Se enviará un mensaje por correo a FindMyBusiness@gmail.com, en el que detallarás el problema que encontraste. Nuestros colaboradores te ayudarán en breve mejorando la aplicación.</string>
    <string name="calificar_producto">Calificar producto</string>
    <string name="escribe_una_opini_n">Escribe una opinión</string>
    <string name="enviar_calificaci_n">Enviar calificación</string>
    <string name="iniciar_en_modo_vendedor">INICIAR EN MODO VENDEDOR</string>
    <string name="reporte_de_bugs">REPORTE DE BUGS</string>
    <string name="reportar_un_bug_report">REPORTAR UN BUG</string>
    <string name="contactanos">¡CONTACTANOS!</string>
    <string name="haz_click_en_el_icono_deseado_para_contactarnos">Haz click en el icono deseado para contactarnos:</string>
    <string name="o_comunicate_a_traves_de_los_siguientes_numeros">o comunicate a traves de los siguientes numeros:</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="marca">Marca</string>
    <string name="descripci_n">Descripción</string>
    <string name="precio_mx">Precio MX$</string>
    <string name="cantidad_disponible">Cantidad disponible:</string>
    <string name="agregar_foto_del_producto">Agregar foto del producto</string>
    <string name="a_adir_un_producto">Añadir un producto</string>
    <string name="a_adir_ahora">Añadir ahora</string>
    <string name="nombre_de_la_empresa">Nombre de la empresa</string>
    <string name="editar_producto">Editar producto</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cu_l_es_el_nombre_de_tu_empresa">¿Cuál es el nombre de tu empresa?</string>
    <string name="mi_negocio_es_ambulante">Mi negocio es ambulante</string>
    <string name="direcci_n">Dirección</string>
    <string name="calle">Calle</string>
    <string name="num_ext">Num EXT</string>
    <string name="num_int">Num INT</string>
    <string name="fraccionamiento">Fraccionamiento</string>
    <string name="c_digo_postal">Código Postal</string>
    <string name="municipio">Municipio</string>
    <string name="tel_fono_y_correo_electr_nico">Teléfono y Correo Electrónico</string>
    <string name="tel_fono">Teléfono</string>
    <string name="giro_de_la_empresa">Giro de la empresa</string>
    <string name="horario">Horario</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="mi_rcoles">Miércoles</string>
    <string name="viernes">Viernes</string>
    <string name="s_bado">Sábado</string>
    <string name="domingo">Domingo</string>
    <string name="describe_brevemente_tu_negocio">Describe brevemente tu negocio</string>
    <string name="subir_foto_o_logo_de_mi_empresa">Subir foto o logo de mi empresa</string>
    <string name="registrar_mi_negocio">Registrar mi negocio</string>


</resources>