<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".createProduct">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:theme="@style/Theme.FindMyBusiness.NoActionBar.AppBarOverlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbareditarnegocio"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#00FFFFFF"
            app:navigationIcon="@drawable/chevron_left_black_24dp"
            app:popupTheme="@style/Theme.FindMyBusiness.NoActionBar.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.25">

        <EditText
            android:id="@+id/txtNombreEditPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nombre_del_producto"
            android:inputType="textPersonName"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/txtApellidosEditPerson"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/marca"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/txtDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/descripci_n"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="169dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="110dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/precio_mx"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtDineroEdit"
                android:layout_width="148dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cantidad_disponible"
                android:textColor="#000000"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/btnActualizarfotoperfil"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/agregar_foto_del_producto"
            android:textColor="#007781"
            app:backgroundTint="#00FFFFFF" />

        <ImageView
            android:id="@+id/picPerfilEditar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:srcCompat="@drawable/ic_menu_gallery" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginTop="5dp"
        android:text="@string/a_adir_un_producto"
        android:textColor="#0056D8"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <Button
        android:id="@+id/btnSubirProducto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/a_adir_ahora"
        android:textColor="#007781"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>