<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".configuracion">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarsettings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:background="#00333333"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/chevron_left_black_24dp"
        app:title="Configuración" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarsettings">

        <Button
            android:id="@+id/btnIdioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#00FFFFFF"
            android:icon="@drawable/ic_baseline_palette_24"
            android:text="@string/idioma"
            android:textColor="#000207" />

        <Switch
            android:id="@+id/switchmodo"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:text="@string/iniciar_en_modo_vendedor"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reporte_de_bugs" />

        <Button
            android:id="@+id/btnReportarBug"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="#00FFFFFF"
            android:icon="@drawable/ic_baseline_palette_24"
            android:text="@string/reportar_un_bug_report"
            android:textColor="#000207" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>