<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E4157"
    android:theme="@style/Theme.FindMyBusiness.NoActionBar"
    tools:context=".RegistrarUsuario">

    <TextView
        android:id="@+id/lblHeader"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="51dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="26dp"
        android:text="@string/registrar_usuario"
        android:textAlignment="center"
        android:textColor="#FDFCFC"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/txtNombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/correo_electronico"
        android:inputType="textEmailAddress"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtApellidos" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="13dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/nombreCompleto"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtApellidos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lblHeader" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="17dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/txtApellidos"
        android:inputType="textPersonName"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtNombre" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="9dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/txtPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtPassword2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="98dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/confirmar_contrase_a"
        android:inputType="textPassword"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnSubir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <ImageView
        android:id="@+id/picFoto"
        android:layout_width="115dp"
        android:layout_height="109dp"
        android:layout_marginTop="79dp"
        android:layout_marginBottom="75dp"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtPassword2"
        app:srcCompat="@drawable/ic_person" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/btnSubir"
        android:layout_width="49dp"
        android:layout_height="0dp"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        android:src="@drawable/upload"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="@+id/picFoto"
        app:layout_constraintStart_toEndOf="@+id/picFoto"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="46dp"
        android:background="@drawable/botton_ro"
        android:backgroundTint="#979696"
        android:text="@string/registrar"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubir" />

</androidx.constraintlayout.widget.ConstraintLayout>